test/corpus/annotations.txt
==================
annotation forms
==================

namespace a

@deprecated
@sql(schema = "shop")
record R {
  @deprecated("use placed_at")
  #1 a: int32
  @sql(key)
  #2 b: int32
  @sql(strategy = embed)
  #3 c: int32
  @sql(unique = (first, second))
  #4 d: int32
}

---

(source_file
  (namespace_declaration name: (qualified_name (identifier)))
  (record_declaration
    (annotation name: (identifier))
    (annotation
      name: (identifier)
      (annotation_argument key: (identifier) value: (string)))
    name: (identifier)
    body: (record_body
      (field
        (annotation
          name: (identifier)
          (annotation_argument value: (string)))
        ordinal: (ordinal)
        name: (identifier)
        type: (type name: (qualified_name (identifier))))
      (field
        (annotation
          name: (identifier)
          (annotation_argument value: (identifier)))
        ordinal: (ordinal)
        name: (identifier)
        type: (type name: (qualified_name (identifier))))
      (field
        (annotation
          name: (identifier)
          (annotation_argument key: (identifier) value: (identifier)))
        ordinal: (ordinal)
        name: (identifier)
        type: (type name: (qualified_name (identifier))))
      (field
        (annotation
          name: (identifier)
          (annotation_argument
            key: (identifier)
            value: (name_tuple (identifier) (identifier))))
        ordinal: (ordinal)
        name: (identifier)
        type: (type name: (qualified_name (identifier)))))))

==================
annotation on the namespace
==================

@sql(schema = "shop")
namespace shop.orders

---

(source_file
  (annotation
    name: (identifier)
    (annotation_argument key: (identifier) value: (string)))
  (namespace_declaration name: (qualified_name (identifier) (identifier))))

==================
keyword as an annotation key
==================

namespace a

@x(record = 1, as = "y", true = false)
record R {}

---

(source_file
  (namespace_declaration name: (qualified_name (identifier)))
  (record_declaration
    (annotation
      name: (identifier)
      (annotation_argument key: (identifier) value: (integer))
      (annotation_argument key: (identifier) value: (string))
      (annotation_argument key: (identifier) value: (boolean)))
    name: (identifier)
    body: (record_body)))

==================
several annotations and docs on one field
==================

namespace a

record R {
  /// Doc.
  @sql(key) @deprecated #1 id: uuid
}

---

(source_file
  (namespace_declaration name: (qualified_name (identifier)))
  (record_declaration
    name: (identifier)
    body: (record_body
      (field
        (doc_comment)
        (annotation
          name: (identifier)
          (annotation_argument value: (identifier)))
        (annotation name: (identifier))
        ordinal: (ordinal)
        name: (identifier)
        type: (type name: (qualified_name (identifier)))))))
