test/corpus/declarations.txt
==================
schema and import
==================

schema shop.orders

import shop.customers
import shop.customers as cust

---

(source_file
  (schema_declaration
    name: (qualified_name
      (identifier)
      (identifier)))
  (import_declaration
    schema: (qualified_name
      (identifier)
      (identifier)))
  (import_declaration
    schema: (qualified_name
      (identifier)
      (identifier))
    alias: (identifier)))

==================
model with fields
==================

schema a

model Order {
  #1 id uuid { id }
  note string?
  #3 status Status = pending
}

---

(source_file
  (schema_declaration
    name: (qualified_name
      (identifier)))
  (model_declaration
    name: (identifier)
    body: (model_body
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier)))
        options: (option_block
          (option
            name: (identifier))))
      (field
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))
          (nullable)))
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier)))
        default: (identifier)))))

==================
nested declarations and reserved
==================

schema a

model Outer {
  #1 x int32
  reserved #2, #5..#7, "old_name"
  model Inner { #1 y int32 }
  enum Kind { a b }
  union Either = Inner | string
  alias Code = string { max 4 }
}

---

(source_file
  (schema_declaration
    name: (qualified_name
      (identifier)))
  (model_declaration
    name: (identifier)
    body: (model_body
      (field
        ordinal: (ordinal)
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier))))
      (reserved_statement
        (ordinal)
        (ordinal_range
          (ordinal)
          (ordinal))
        (string))
      (model_declaration
        name: (identifier)
        body: (model_body
          (field
            ordinal: (ordinal)
            name: (identifier)
            type: (type
              name: (qualified_name
                (identifier))))))
      (enum_declaration
        name: (identifier)
        body: (enum_body
          (enum_value
            name: (identifier))
          (enum_value
            name: (identifier))))
      (union_declaration
        name: (identifier)
        (union_member
          type: (type
            name: (qualified_name
              (identifier))))
        (union_member
          type: (type
            name: (qualified_name
              (identifier)))))
      (alias_declaration
        name: (identifier)
        type: (type
          name: (qualified_name
            (identifier)))
        options: (option_block
          (option
            name: (identifier)
            value: (integer)))))))

==================
enum with and without commas
==================

schema a

enum Status { pending, paid shipped }
enum Numbered { #1 a #2 b reserved #3, "c" }

---

(source_file
  (schema_declaration
    name: (qualified_name
      (identifier)))
  (enum_declaration
    name: (identifier)
    body: (enum_body
      (enum_value
        name: (identifier))
      (enum_value
        name: (identifier))
      (enum_value
        name: (identifier))))
  (enum_declaration
    name: (identifier)
    body: (enum_body
      (enum_value
        ordinal: (ordinal)
        name: (identifier))
      (enum_value
        ordinal: (ordinal)
        name: (identifier))
      (reserved_statement
        (ordinal)
        (string)))))

==================
union and alias
==================

schema a

union Payment = #1 Card | #2 shop.BankTransfer | Cash

alias Money = decimal(19, 4)

---

(source_file
  (schema_declaration
    name: (qualified_name
      (identifier)))
  (union_declaration
    name: (identifier)
    (union_member
      ordinal: (ordinal)
      type: (type
        name: (qualified_name
          (identifier))))
    (union_member
      ordinal: (ordinal)
      type: (type
        name: (qualified_name
          (identifier)
          (identifier))))
    (union_member
      type: (type
        name: (qualified_name
          (identifier)))))
  (alias_declaration
    name: (identifier)
    type: (type
      name: (qualified_name
        (identifier))
      precision: (decimal_arguments
        (integer)
        (integer)))))

==================
future declarations
==================

schema a

operation place { o Order { nested } }
operation Events

---

(source_file
  (schema_declaration
    name: (qualified_name
      (identifier)))
  (future_declaration
    (identifier)
    (block
      (block)))
  (future_declaration
    (identifier)))
